[gd_scene load_steps=5 format=2]

[ext_resource path="res://Szenen/DG/Modul.tscn" type="PackedScene" id=1]
[ext_resource path="res://Szenen/DG/Ampermeter.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=2]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="Ampermeter" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="InfoSprite" parent="." index="0"]
position = Vector2( 1, -83 )
region_rect = Rect2( 0, 0, 113, 62 )

[node name="Delete" parent="InfoSprite" index="0"]
margin_left = 6.0
margin_top = -13.0
margin_right = 37.0
margin_bottom = 14.0

[node name="CutOut" parent="InfoSprite" index="1"]
margin_left = -39.0
margin_top = -17.0
margin_right = -8.0
margin_bottom = 16.0

[node name="TurnCCW" parent="InfoSprite" index="2"]
margin_left = -86.0
margin_top = -19.0
margin_right = -51.0
margin_bottom = 18.0

[node name="TurnLSprite" parent="InfoSprite" index="3"]
position = Vector2( -76.61, 0.5 )

[node name="TurnCW" parent="InfoSprite" index="4"]
margin_left = 54.0
margin_top = -19.0
margin_right = 92.0
margin_bottom = 20.0

[node name="TurnRSprite" parent="InfoSprite" index="5"]
position = Vector2( 76.456, 0.5 )

[node name="Sprite" parent="." index="1"]
position = Vector2( -1, 0 )
scale = Vector2( 1.5, 1.5 )
region_rect = Rect2( 96, 48, 48, 48 )

[node name="AmperLabel" type="Label" parent="." index="2"]
margin_left = -33.0
margin_top = -38.0
margin_right = 37.0
margin_bottom = -2.0
rect_scale = Vector2( 0.9, 0.9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "900.9 A"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_editor_description_": ""
}

[node name="leftK" parent="." index="3"]
visible = true

[node name="rightK" parent="." index="4"]
visible = true
